feat(AppBundle): improve memory footprint (#2493)
- Unzip in place in a temporary folder
- Save only the file path, not the file data
- Each file data is imported only when required for treatment
-  fileAndContent class and keep File only
- improve FileOperations:
	* Use java nio operations where relevant.
	* Use ZipFile to retrieve files from zip

While we only save ~10Mb on peak RAM usage when importing a 120 Mb process (the peak being at 390 Mb), we overall use a lot less of it at other times (deeper "valleys" in the consumption graph).