@@ -16,13 +16,7 @@ package org.bonitasoft.engine.io;
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.io.FileInputStream;
-import java.io.FileNotFoundException;
-import java.io.IOException;
-import java.io.InputStream;
+import java.io.*;
 import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
@@ -30,6 +24,7 @@ import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.UUID;
 import java.util.zip.ZipEntry;
+import java.util.zip.ZipFile;
 import java.util.zip.ZipInputStream;
 
 /**
@@ -39,9 +34,19 @@ import java.util.zip.ZipInputStream;
  */
 public class FileOperations {
 
+    private FileOperations() {
+        // private constructor
+    }
+
     public static byte[] getFileFromZip(File zip, String filePath) throws IOException {
-        try (InputStream inputStream = new FileInputStream(zip)) {
-            return getFileFromZip(inputStream, filePath);
+        try (var zipFile = new ZipFile(zip)) {
+            var entry = zipFile.getEntry(filePath);
+            if (entry == null) {
+                throw new FileNotFoundException(String.format("'%s' not found in %s", filePath, zip.getName()));
+            }
+            try (var is = zipFile.getInputStream(entry)) {
+                return is.readAllBytes();
+            }
         }
     }
 
@@ -50,25 +55,41 @@ public class FileOperations {
         try (FileSystem fs = FileSystems.newFileSystem(zipFilePath, (ClassLoader) null)) {
             Path source = fs.getPath(filePath);
             Path temp = fs.getPath("./temp_" + UUID.randomUUID().toString());
-            Files.write(temp, readFully(newContent), StandardOpenOption.CREATE_NEW);
+            Files.write(temp, newContent.readAllBytes(), StandardOpenOption.CREATE_NEW);
             Files.move(temp, source, REPLACE_EXISTING);
         }
     }
 
+    /**
+     * @deprecated use {@link FileOperations#getFileFromZip(File, String)} instead.
+     */
+    @Deprecated
     public static byte[] getFileFromZip(byte[] content, String filePath) throws IOException {
         return getFileFromZip(new ByteArrayInputStream(content), filePath);
     }
 
+    /**
+     * @deprecated use {@link FileOperations#getFileFromZip(File, String)} instead.
+     */
+    @Deprecated
     public static byte[] getFileFromZip(InputStream inputStream, String filePath) throws IOException {
         try (ZipInputStream zipInputStream = new ZipInputStream(inputStream)) {
             ZipEntry zipEntry;
             while ((zipEntry = zipInputStream.getNextEntry()) != null) {
                 if (zipEntry.getName().equals(filePath) && !zipEntry.isDirectory()) {
-                    return readFully(zipInputStream);
+                    return zipInputStream.readAllBytes();
                 }
             }
             throw new FileNotFoundException(String.format("Entry %s not found in zip", filePath));
         }
+    }
+
+    public static String read(File file) throws IOException {
+        return Files.readString(file.toPath(), UTF_8);
+    }
+
+    public static byte[] readFully(File file) throws IOException {
+        return Files.readAllBytes(file.toPath());
     }
 
     public static byte[] readFully(InputStream in) throws IOException {
@@ -79,18 +100,6 @@ public class FileOperations {
             out.write(buf, 0, n);
         }
         return out.toByteArray();
-    }
-
-    public static String read(File file) throws IOException {
-        try (InputStream inputStream = new FileInputStream(file)) {
-            return new String(readFully(inputStream), UTF_8);
-        }
-    }
-
-    public static byte[] readFully(File file) throws IOException {
-        try (InputStream inputStream = new FileInputStream(file)) {
-            return readFully(inputStream);
-        }
     }
 
     public static boolean isBarFile(String fileName) {
@@ -121,6 +130,6 @@ public class FileOperations {
      * Gets the contents of a classpath resource as a byte array.
      */
     public static byte[] resourceAsBytes(String name) throws IOException {
-        return FileOperations.readFully(resource(name));
+        return resource(name).readAllBytes();
     }
 }
